# Hotdog-Inspector

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Hotdog_Inspector.sublime-project  Hotdog_Inspector.sublime-workspace  Makefile  README.md  build.bat  build.sh  cmake_install.cmake
include/: Animation.hpp  AudioManager.hpp  Camera.hpp  Character.hpp  Clickable.hpp  ClickableSpawner.hpp  Controls.hpp  Conveyor.hpp  Crate.hpp  Cursor.hpp  Furnace.hpp  Game.hpp  GameWorld.hpp  Hotdog.hpp  Life.hpp  Lives.hpp  Math.hpp  Menu.hpp  Particle.hpp  Player.hpp  RenderWindow.hpp  Splash.hpp  Sprite.hpp  Text.hpp  Transform.hpp
res/: converyor_belt_0.json  conveyor_belt_0.ase  conveyor_belt_0.json  crate_0.ase  fire_0.ase  font.json  title.ase  title.json
res/UI/: X.json
res/clickable/: radioactive.json  rat.json
res/hotdog/: radioactive.json
src/: animation.cpp  audiomanager.cpp  camera.cpp  character.cpp  clickablespawner.cpp  controls.cpp  conveyor.cpp  crate.cpp  cursor.cpp  furnace.cpp  game.cpp  gameworld.cpp  hotdog.cpp  imgui_sdl.cpp  jsoncpp.cpp  life.cpp  lives.cpp  main.cpp  math.cpp  menu.cpp  particle.cpp  player.cpp  renderwindow.cpp  splash.cpp  sprite.cpp  text.cpp
